src/scss/frontend/footer/_.scss
body > footer {
	z-index: 10;
	background-color: var(--#{$PREFIX}-color-footer-background);
	color: var(--#{$PREFIX}-color-footer-foreground);

	padding: 3vh 2vw;
	font-size: 0.75rem;
	
	position: relative;
	z-index: 1;

	user-select: none;

	.row-container {
		display: grid;
		grid-template-columns: min-content max-content 1fr;
		grid-template-rows: 100%;
		grid-template-areas: "foot_logo foot_nav foot_copyright";
		grid-column-gap: 3em;

		padding: 0;

		& > * {
			align-self: center;
		}

		@include phone {
			grid-template-columns: 100%;
			grid-template-rows: max-content;
			grid-template-areas:
				"foot_logo"
				"foot_nav"
				"foot_copyright";
			grid-row-gap: 1em;
			justify-items: center;
			text-align: center;
		}
	}

	.logo {
		grid-area: foot_logo;
		height: 90px;
		//max-width: 200px;

		a {
			display: block;
			width: 100%;
			height: 100%;
		}
		img {
			display: block;
			height: 100%;
			width: auto;

			@include phone {
				width: 80%;
				margin: 0 auto;
			}
		}
	}

	a {
		color: inherit;
		text-decoration: none;

		@include hover {
			color: var(--#{$PREFIX}-color-highlight);
			text-decoration: underline;
		}
	}

	ul, li {
		list-style: none;
		margin: 0;
		padding: 0;
	}

	.menu {
		grid-area: foot_nav;

		& > ul {
			column-count: 4;
			column-gap: .25em;
			height: 100%;

			li {
				display: block;
				margin: 0 1em .25em 0;
				//overflow: hidden;
			}

			@include phone {
				display: block;
				column-count: 1;
				font-size: 0.9rem;
				margin-top: .5em;

				li {
					display: inline-block;
					margin: 0 .5em .5em;
				}
			}
		}
	}

	.copyright {
		grid-area: foot_copyright;
		text-align: right;

		@include phone {
			text-align: center;
		}
	}
}

